<resources>
    <string name="app_name">MisConciertosApp</string>
    <string name="genero_musical">Genero Musical:</string>
    <string name="nombre_artista">Nombre del Artista:</string>
    <string name="valor_entrada">Valor de entrada:</string>
    <string name="calificacion">Calificación</string>
    <string name="registrar_btn">Registrar</string>
    <string name="fecha_evento">Fecha del Evento:</string>
    <string name="lista_conciertos">Lista de conciertos</string>
</resources>